# AribtrageBacktester

./: README.md  comparison.py
CppImplementation/: .gitignore  CMakeLists.txt  COMPARISON.md
CppImplementation/include/: ArbitrageBacktester.hpp
CppImplementation/src/: ArbitrageBacktester.cpp  main.cpp
PythonImplementation/: main.py
